Fix portfolio issues on mobile with is-hidden and is-visible classes

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -27,6 +27,9 @@ body {
   display: none;
 }
 
+.is-visible {
+  display: none;
+}
 
 .thumb {
   /*float: left;*/
@@ -38,3 +41,12 @@ body {
   padding: .5em;
 }
 
+@media (max-width: 767px) {
+  .is-hidden {
+    display: none;
+  }
+  .is-visible {
+    display: block;
+  }
+  
+}
